cmake_minimum_required(VERSION 2.6)

PROJECT(bsa)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${bsa_SOURCE_DIR})

FIND_PACKAGE(CellML REQUIRED)
FIND_PACKAGE(CCGS REQUIRED)
FIND_PACKAGE(Redland REQUIRED)

ADD_DEFINITIONS(-Wall -Werror
  ${Redland_DEFINITIONS}
)

INCLUDE_DIRECTORIES(
  ${CELLML_INCLUDE_DIR}
  ${CCGS_INCLUDE_DIR}
)

SET(bsa_SRCS
  src/bsa.cpp
  src/SimulationList.cpp
)

ADD_EXECUTABLE(bsa ${bsa_SRCS})
TARGET_LINK_LIBRARIES(bsa
  ${CELLML_LIBRARIES}
  ${CCGS_LIBRARIES}
  ${Redland_LIBRARIES}
  -ldl -lm
)