cmake_minimum_required(VERSION 2.6)

PROJECT(bsa)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${bsa_SOURCE_DIR})

FIND_PACKAGE(CellML REQUIRED)
FIND_PACKAGE(CCGS REQUIRED)
FIND_PACKAGE(Redland REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED QUIET)

ADD_DEFINITIONS(-Wall -Werror
  ${LIBXML2_DEFINITIONS}
  ${Redland_DEFINITIONS}
)

INCLUDE_DIRECTORIES(
  ${CELLML_INCLUDE_DIR}
  ${CCGS_INCLUDE_DIR}
  ${LIBXML2_INCLUDE_DIR}
)

SET(bsa_SRCS
  src/bsa.cpp
  src/CellMLModelDefinition.cpp
  src/RDFGraph.cpp
)

ADD_EXECUTABLE(bsa ${bsa_SRCS})
TARGET_LINK_LIBRARIES(bsa
  ${CELLML_LIBRARIES}
  ${CCGS_LIBRARIES}
  ${Redland_LIBRARIES}
  ${LIBXML2_LIBRARIES}
  -ldl -lm
)